<resources>
    <string name="app_name">PGL_PruebaPractica</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="insert_button">Insert</string>
    <string name="delete_button">Delete</string>
    <string name="volver_button">Volver</string>
    <string name="show_button">Muestra localidades</string>
    <string name="cod_oficina">Codigo de oficina:</string>
    <string name="direccion">Direccion:</string>
    <string name="localidad">Localidad:</string>
    <string name="telefono">Telefono:</string>
</resources>