<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".OficeInfoActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <TextView
        android:id="@+id/codTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/cod_oficina"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/codOficinaTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/dirTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/direccion"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/direccionOficinaTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/localTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/localidad"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/localidadOficinaTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/telefTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/telefono"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/telefonoOficinaTextV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/volverButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:fontFamily="@font/roboto_light"
        android:text="@string/volver_button"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>